Homework3 Prob2 : javascript

--- a/html/Homework3/WebContent/main.html
+++ b/html/Homework3/WebContent/main.html
@@ -10,6 +10,8 @@
  
     <!-- 2. 데스크탑용 외부 스타일시트 적용 -->
     <link rel="stylesheet" href="./desktop.css" media="(min-width:600px)">
+	<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+	<script src="prob2.js"></script>
 </head>
 <body>
     
